--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -149,7 +149,7 @@
             </svg>
           </a>
           <!-- 펀딩 관리  -->
-          <a href="javascript:void(0)" class="sidebar__menu">
+          <a href="/templates/admin/funding.html" class="sidebar__menu">
             <div class="sidebar__menu__name">
               <div>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23.33 19.56">
