--- a/src/main/resources/templates/funding/funding-creater-info.html
+++ b/src/main/resources/templates/funding/funding-creater-info.html
@@ -79,14 +79,14 @@
                         <div class="projectForm">
                             <div class="projectFormWrap">
                                 <div class="guideCheckWrapper">
-                                    <div class="TextAreaWrap" style="border: 1px solid rgb(240, 240, 240);">
+                                    <div class="TextAreaWrap">
                                         <div class="textWrap textStyle">
                                             <textarea placeholder="간단한 이력과 소개를 써주세요" class="textareaStyle" maxlength="300"></textarea>
                                         </div>
                                     </div>
                                     <div class="noticeArea">
                                         <p class="guidearea"></p>
-                                        <span class="textguideArea" style="color: rgba(0, 0, 0, 0.87);" >0/300</span>
+                                        <span class="textguideArea">0/300</span>
                                     </div>
                                 </div>
                             </div>
@@ -340,9 +340,9 @@
                                     <li>
                                         <p class="itemName">계좌 번호</p>
                                         <div class="inputWithGuideWrap">
-                                            <div class="guideWrap">
+                                            <div class="guideWrap test2">
                                                 <span class="wraperSpan inputWithGuide">
-                                                    <input type="text" inputmode="text" placeholder="숫자로만 입력해주세요" autocomplete="off" autocapitalize="off" class="input_innerInput" value=""></span></div>
+                                                    <input type="text" inputmode="text" placeholder="숫자로만 입력해주세요" autocomplete="off" autocapitalize="off" maxlength="16" class="input_innerInput accountInput" value=""></span></div>
                                             <div class="noticeArea_lengCheck">
                                                 <p class="guideMsg"></p>
                                                 <span class="contentLengthCheck">0/16</span>
