--- a/src/main/resources/static/css/funding/funding.css
+++ b/src/main/resources/static/css/funding/funding.css
@@ -597,6 +597,7 @@ textarea {
     border: 0px;
     padding: 0px;
     resize: none;
+    outline: none;
 }
 .textStyle textarea {
     background: transparent;
