--- a/src/main/resources/templates/admin/funding.html
+++ b/src/main/resources/templates/admin/funding.html
@@ -6,21 +6,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>활동 후기 게시판 관리</title>
-    <link
-      href="https://hangeul.pstatic.net/hangeul_static/css/nanum-barun-gothic.css"
-      rel="stylesheet" />
+    <title>펀딩 관리</title>
+    <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-barun-gothic.css" rel="stylesheet" />
     <link rel="stylesheet" href="/static/css/admin/default.css" />
     <link rel="stylesheet" href="/static/css/admin/sidebar.css" />
     <link rel="stylesheet" href="/static/css/admin/content.css" />
     <link rel="stylesheet" href="/static/css/admin/status.css" />
-    <link rel="stylesheet" href="/static/css/admin/activity-review-modal.css" />
     <link rel="stylesheet" href="/static/css/admin/paging.css">
-    <!-- 웹에디터 API -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css"
-      rel="stylesheet" />
+    <link rel="stylesheet" href="/static/css/admin/volunteer.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet" />
   </head>
+  <style>
+    .user__profile__input input {
+    padding: 3px 5px;
+    }
+    .volunteer_input{
+      width: 630px;
+    }
+  .button__type_2 {
+      width: 70px;
+    }
+  </style>
   <body>
     <section class="main">
       <section class="sidebar">
@@ -84,7 +91,7 @@
                 <polygon points="160,115.4 180.7,96 352,256 180.7,416 160,396.7 310.5,256 " />
               </svg>
             </a>
-            
+           
             <!-- 봉사관리 -->
             <a href="/templates/admin/volunteer.html" class="sidebar__menu">
               <div class="sidebar__menu__name">
@@ -297,7 +304,7 @@
       <!-- content.css -->
       <section class="content">
         <div class="content__header">
-          <span>활동 후기 게시판 관리</span>
+          <span>펀딩 관리</span>
           <a href="javascript:void(0)"> 로그아웃 </a>
         </div>
         <main class="content__main">
@@ -321,12 +328,76 @@
                         d="M9.75 12.5C9.75 11.3954 10.6454 10.5 11.75 10.5H16.125L18 12.75H9.75V12.5Z"
                         fill="#11CA2D"></path>
                     </svg>
-                    <div class="status-item-name">총 게시판 수</div>
+                    <div class="status-item-name">펀딩 내역</div>
                   </div>
                   <div class="status-item-count">
                     <a href="">0</a>
                   </div>
                 </li>
+                <li class="status-list-item">
+                  <div class="status-item-wrapper">
+                    <div class="problem-icon-wrapper">
+                      <div class="problem-icon">
+                        <div>
+                          <div>
+                            <span>
+                              <svg
+                                width="36"
+                                height="36"
+                                viewBox="0 0 36 36"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <rect width="36" height="36" rx="12" fill="#EDFEE0"></rect>
+                                <path
+                                  d="M9.75 12.75H24.25C25.3546 12.75 26.25 13.6454 26.25 14.75V24.25C26.25 25.3546 25.3546 26.25 24.25 26.25H11.75C10.6454 26.25 9.75 25.3546 9.75 24.25V12.75Z"
+                                  fill="#11CA2D"></path>
+                                <path
+                                  d="M9.75 12.5C9.75 11.3954 10.6454 10.5 11.75 10.5H16.125L18 12.75H9.75V12.5Z"
+                                  fill="#11CA2D"></path>
+                              </svg>
+                            </span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="status-item-name">펀딩 승인</div>
+                  </div>
+                  <div class="status-item-count">
+                    <a href="">0</a>
+                  </div>
+                </li>
+                <li class="status-list-item">
+                <div class="status-item-wrapper">
+                  <div class="problem-icon-wrapper">
+                    <div class="problem-icon">
+                      <div>
+                        <div>
+                          <span>
+                            <svg
+                              width="36"
+                              height="36"
+                              viewBox="0 0 36 36"
+                              fill="none"
+                              xmlns="http://www.w3.org/2000/svg">
+                              <rect width="36" height="36" rx="12" fill="#EDFEE0"></rect>
+                              <path
+                                d="M9.75 12.75H24.25C25.3546 12.75 26.25 13.6454 26.25 14.75V24.25C26.25 25.3546 25.3546 26.25 24.25 26.25H11.75C10.6454 26.25 9.75 25.3546 9.75 24.25V12.75Z"
+                                fill="#11CA2D"></path>
+                              <path
+                                d="M9.75 12.5C9.75 11.3954 10.6454 10.5 11.75 10.5H16.125L18 12.75H9.75V12.5Z"
+                                fill="#11CA2D"></path>
+                            </svg>
+                          </span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="status-item-name">펀딩 대기</div>
+                </div>
+                <div class="status-item-count">
+                  <a href="">0</a>
+                </div>
+              </li>
                 <div class="clock">
                   <h2>현재시간</h2>
                   <h1></h1>
@@ -336,19 +407,19 @@
             <div class="table__box">
               <div class="table__search__form">
                 <div>
-                <button
-                  id="delete-button"
-                  class="button__type_2 button__color__red"
-                  style="width: 120px">
-                  게시판 삭제
-                </button>
-                <button
-                  id="create-button"
-                  class="button__type_3 button__color__green"
-                  style="width: 120px;">
-                  게시판 작성
-                </button>
-              </div>
+                  <button
+                    id="delete-button"
+                    class="button__type_2 button__color__red"
+                    style="width: 120px">
+                    펀딩내역 삭제
+                  </button>
+                  <button
+                    id="funding-check"
+                    class="button__type_2 button__color__red registVolunteer"
+                    style="width: 120px">
+                    펀딩 승인
+                  </button>
+                </div>
                 <!-- default.css -->
                 <div class="search-box-wrap">
                   <div class="select-box">
@@ -390,13 +461,13 @@
                       <input type="checkbox" id="checkAll" />
                     </label>
                   </th>
-                  <th class="content__id">게시판 번호</th>
-                  <th>게시판 제목</th>
-                  <th>게시판 등록일</th>
-                  <th>게시판 수정일</th>
-                  <th>아이디</th>
-                  <th>작성자</th>
-                  <th></th>
+                  <th class="content__id">펀딩번호</th>
+                  <th>카테고리</th>
+                  <th>펀딩상품</th>
+                  <th>펀딩시작</th>
+                  <th>펀딩종료</th>
+                  <th>창작자</th>
+                  <th>펀딩 승인</th>
                 </tr>
                 <tr class="table__content">
                   <td>
@@ -405,11 +476,12 @@
                     </label>
                   </td>
                   <td class="content__id">1</td>
-                  <td class="notice-content">봉사활동 재밌어요!</td>
+                  <td>영화</td>
+                  <td>백엔드 잘하기</td>
                   <td>2023-01-01</td>
-                  <td>2023-01-02</td>
-                  <td>simchung98</td>
-                  <td>심청이</td>
+                  <td>2023-05-30</td>
+                  <td>정현진</td>
+                  <td class="enquiryOk">승인</td>
                   <td>
                     <button class="content__detail__btn button__type_2 button__color__green">
                       상세보기
@@ -422,13 +494,14 @@
                       <input type="checkbox" name="check" />
                     </label>
                   </td>
-                    <td class="content__id">1</td>
-                    <td class="notice-content">봉사활동 재밌어요!</td>
-                    <td>2023-01-01</td>
-                    <td>2023-01-02</td>
-                    <td>simchung98</td>
-                    <td>심청이</td>
-                    <td>
+                  <td class="content__id">2</td>
+                  <td>디자인</td>
+                  <td>백엔드 잘하기</td>
+                  <td>2023-01-01</td>
+                  <td>2023-05-30</td>
+                  <td>정현진</td>
+                  <td class="enquiryNo">대기</td>
+                  <td>
                     <button class="content__detail__btn button__type_2 button__color__green">
                       상세보기
                     </button>
@@ -447,7 +520,7 @@
                   <input type="hidden">
                   <input type="hidden">
                 </form>
-            </div>
+              </div>
             </div>
           </div>
         </main>
@@ -469,12 +542,10 @@
           </div>
         </div>
       </div>
-
-      <!-- 게시판 상세보기 -->
-      <section class="modal-stage create-modal" style="display: none">
+      <section class="modal-stage" style="display: none">
         <section class="modal">
           <div class="modal__header">
-            <h3 class="modal__title">게시판 상세보기</h3>
+            <h3 class="modal__title">펀딩 상세보기</h3>
             <a class="modal-close">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -488,24 +559,105 @@
           </div>
           <form class="storage_form" action="">
             <main class="modal__main">
-              <div class="modal__content">
-                <div class="content__title">
-                  <h4>게시판 제목</h4>
-                  <div class="content__intput notice__title">
-                    <input type="text" name="" value="게시판 테스트용 제목" />
-                  </div>
-                  <div class="content__intput date" style="flex: 0">
-                    <input type="date" />
+              <div class="modal__profile__top">
+                <h4>펀딩 정보</h4>
+                <div class="user__profile">
+                  <h5>창작자 이름</h5>
+                  <div class="user__profile__input">
+                    <input type="text" name="" value="김주연" readonly="true" />
                   </div>
                 </div>
+                <div class="user__profile">
+                  <h5>프로젝트 카테고리</h5>
+                  <div class="user__profile__input">
+                    <input type="text" name="" value="백엔드 잘하고싶다" readonly="true" />
+                  </div>
+                </div>
+                <div class="user__profile">
+                  <h5>프로젝트 제목</h5>
+                  <div class="user__profile__input">
+                    <input type="text" name="" value="퍼블리싱 힘들다" readonly="true" />
+                  </div>
+                </div>
+                <div class="user__profile">
+                  <h5>펀딩 일정</h5>
+                  <div class="user__profile__input">
+                    <input type="text" name="" value="2023-03-01" readonly="true" />
+                    <input type="text" name="" value="2023-04-20" readonly="true" />
+                  </div>
+                </div>
+                <div class="user__profile">
+                  <h5>정산 일정</h5>
+                  <div class="user__profile__input">
+                    <input type="text" name="" value="2023-05-20" readonly="true" />~
+                  </div>
+                </div>
+                <div class="user__profile">
+                  <h5>목표금액</h5>
+                  <div class="user__profile__input">
+                    <input type="text" name="" value="1000원" readonly="true" />
+                  </div>
+                </div>
+                <div class="user__profile">
+                  <h5>대표 선물상품</h5>
+                  <div class="user__profile__input">
+                    <input type="text" name="" value="맥북프로 가지고싶다" readonly="true" />
+                  </div>
+                </div>
+                
+                <h4 style="margin-top: 20px;">이미지</h4>
+                <!-- 이미지 파일 -->
+                <div class="content__img__wrap">
+                    <!-- 임시로 name='file' 해둠 -->
+                    <label>
+                      <div class="content__img">
+                        <img
+                          src="https://us.123rf.com/450wm/mathier/mathier1905/mathier190500002/134557216-%EC%8D%B8%EB%84%A4%EC%9D%BC-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EC%97%86%EC%9D%8C-%ED%8F%AC%EB%9F%BC-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%B0%8F-%EC%9B%B9%EC%82%AC%EC%9D%B4%ED%8A%B8%EC%9A%A9-%EC%9E%90%EB%A6%AC-%ED%91%9C%EC%8B%9C%EC%9E%90.jpg?ver=6" />
+                      </div>
+                      <input type="file" name="file" style="display: none" />
+                    </label>
+                    <label>
+                      <div class="content__img">
+                        <img
+                          src="https://us.123rf.com/450wm/mathier/mathier1905/mathier190500002/134557216-%EC%8D%B8%EB%84%A4%EC%9D%BC-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EC%97%86%EC%9D%8C-%ED%8F%AC%EB%9F%BC-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%B0%8F-%EC%9B%B9%EC%82%AC%EC%9D%B4%ED%8A%B8%EC%9A%A9-%EC%9E%90%EB%A6%AC-%ED%91%9C%EC%8B%9C%EC%9E%90.jpg?ver=6" />
+                      </div>
+                      <input type="file" name="file" style="display: none" />
+                    </label>
+                    <label>
+                      <div class="content__img">
+                        <img
+                          src="https://us.123rf.com/450wm/mathier/mathier1905/mathier190500002/134557216-%EC%8D%B8%EB%84%A4%EC%9D%BC-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EC%97%86%EC%9D%8C-%ED%8F%AC%EB%9F%BC-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%B0%8F-%EC%9B%B9%EC%82%AC%EC%9D%B4%ED%8A%B8%EC%9A%A9-%EC%9E%90%EB%A6%AC-%ED%91%9C%EC%8B%9C%EC%9E%90.jpg?ver=6" />
+                      </div>
+                      <input type="file" name="file" style="display: none" />
+                    </label>
+                    <label>
+                      <div class="content__img">
+                        <img
+                          src="https://us.123rf.com/450wm/mathier/mathier1905/mathier190500002/134557216-%EC%8D%B8%EB%84%A4%EC%9D%BC-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EC%97%86%EC%9D%8C-%ED%8F%AC%EB%9F%BC-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%B0%8F-%EC%9B%B9%EC%82%AC%EC%9D%B4%ED%8A%B8%EC%9A%A9-%EC%9E%90%EB%A6%AC-%ED%91%9C%EC%8B%9C%EC%9E%90.jpg?ver=6" />
+                      </div>
+                      <input type="file" name="file" style="display: none" />
+                    </label>
+                    <label>
+                      <div class="content__img">
+                        <img
+                          src="https://us.123rf.com/450wm/mathier/mathier1905/mathier190500002/134557216-%EC%8D%B8%EB%84%A4%EC%9D%BC-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EC%97%86%EC%9D%8C-%ED%8F%AC%EB%9F%BC-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%B0%8F-%EC%9B%B9%EC%82%AC%EC%9D%B4%ED%8A%B8%EC%9A%A9-%EC%9E%90%EB%A6%AC-%ED%91%9C%EC%8B%9C%EC%9E%90.jpg?ver=6" />
+                      </div>
+                      <input type="file" name="file" style="display: none" />
+                    </label>
+                </div>
+                <h4 style="margin-top: 40px; margin-bottom: -15px;">프로젝트 소개</h4>
                 <div class="notice__content">
-                  <textarea id="summernote" name="editordata"></textarea>
+                  <textarea id="introduce" name="editordata"></textarea>
                 </div>
-              </div>
-              <div class="user__profile__button">
-                <button id="completeBtn" class="button__type_2 button__color__green">
-                  작성완료
-                </button>
+                <h4 style="margin-top: 40px; margin-bottom: -15px;">프로젝트 예산</h4>
+                <div class="notice__content">
+                  <textarea id="budget" name="editordata"></textarea>
+                </div>
+                <div class="user__profile__button" style="margin-top: 20px;">
+                  <button id="completeBtn" class="button__type_2 button__color__green">
+                    작성완료
+                  </button>
+                </div>
               </div>
             </main>
           </form>
@@ -514,15 +666,11 @@
     </section>
   </body>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  <script src="/static/js/admin/app.js"></script>
-  <script src="/static/js/admin/events.js"></script>
-  <script src="/static/js/admin/active-review-board.js"></script>
-  <!-- 웹에디터 API -->
   <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>
   <script>
     console.log('썸머노트');
-    $('#summernote').summernote({
-      placeholder: '게시판 내용 작성',
+    $('#introduce').summernote({
+      placeholder: '프로젝트 소개',
       tabsize: 2,
       height: 300,
       width: '100%',
@@ -535,5 +683,58 @@
         ['insert', ['link', 'picture', 'video']],
       ],
     });
+    $('#budget').summernote({
+      placeholder: '프로젝트 예산 계획 내용',
+      tabsize: 2,
+      height: 300,
+      width: '100%',
+      toolbar: [
+        ['style', ['style']],
+        ['font', ['bold', 'underline', 'clear']],
+        ['color', ['color']],
+        ['para', ['ul', 'ol', 'paragraph']],
+        ['table', ['table']],
+        ['insert', ['link', 'picture', 'video']],
+      ],
+    });
+
+    $('.registVolunteer').on('click',()=>{
+      $modalStage.show();
+      $('.modal-close').on('click', function () {
+         $modalStage.fadeOut(500);
+       });
+
+    })
+
+    // $('.volunteer_button').on('click', ()=>{
+    //   $('.volunteer-modal').show();
+    //     $('.modal-close').on('click', function () {
+    //       $('.volunteer-modal').fadeOut(500);
+    //     });
+    // })
+    
+  </script>
+  <script src="/static/js/admin/app.js"></script>
+  <script src="/static/js/admin/events.js"></script>
+  <script>
+    $('.volunteer_button').on('click', ()=>{
+      $('.volunteer-modal').show();
+      $('.modal-stage').fadeOut(500);
+      
+
+        $('.modal-close').on('click', function () {
+          $('.volunteer-modal').fadeOut(500);
+        });
+        
+    })
+    $detailButton.on('click', ()=>{
+      $('.modal-stage').show();
+      $('.volunteer-modal').fadeOut(500);
+
+        $('.modal-close').on('click', function () {
+          $('.modal-stage').fadeOut(500);
+        });
+        
+    })
   </script>
 </html>
