--- a/src/main/resources/templates/admin/gongyangmi-refund.html
+++ b/src/main/resources/templates/admin/gongyangmi-refund.html
@@ -147,7 +147,7 @@
               </svg>
             </a>
             <!-- 펀딩 관리  -->
-            <a href="javascript:void(0)" class="sidebar__menu">
+            <a href="/templates/admin/funding.html" class="sidebar__menu">
               <div class="sidebar__menu__name">
                 <div>
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23.33 19.56">
@@ -294,7 +294,7 @@
       <section class="content">
         <div class="content__header">
           <span>공양미 환전 관리</span>
-          <a href="javascript:void(0)"> 로그아웃 </a>
+          <a href="/templates/admin/gongyangmi-refund.html"> 로그아웃 </a>
         </div>
         <main class="content__main">
           <div class="table__container">
