--- a/src/main/resources/templates/support/support-rice-modal.html
+++ b/src/main/resources/templates/support/support-rice-modal.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="support-rice-layout">
-        <form>
+        <!-- <form name=""> -->
             <div class="suppport-rice-container">
                 <div class="">
                     <input type="text" placeholder="공양미 입력"  class="rice-payment-input" value="">
@@ -25,12 +25,12 @@
                     <span>확인</span>
                 </button>
             </div>
-        </form>
+        <!-- </form> -->
     </div>
     
 
 </body>
-<!-- <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script> -->
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <!-- <script src="../../static/js/support/support-rice-modal.js"></script> -->
 
 
