--- a/src/main/resources/templates/funding/funding-list.html
+++ b/src/main/resources/templates/funding/funding-list.html
@@ -19,10 +19,10 @@
         <div></div>
         <div class="contain">
             <div class="discover tbb">
-                <div class="filterWrap hRsKsV">
+                <div class="filterWrap ">
                     <div class="filterCont discoverCont">
-                        <div class="filterLayout boizim">
-                            <div class="filterOp gIFvgV">
+                        <div class="filterLayout ">
+                            <div class="filterOp ">
                                 <div class="wrap">
                                     <span class="spanWrap">
                                         <button class="buttonWrap">
@@ -268,7 +268,7 @@
                             </div>
                             <div class="listByinfinity">
                                 <div></div>
-                                <div class="project-card project-card">
+                                <div class="project-card">
                                     <div></div>
                                     <div class="CardOpx link-wrapper">
                                         <div class="imgStyleBox">
@@ -304,7 +304,7 @@
                             </div>
                             <div class="listByinfinity">
                                 <div></div>
-                                <div class="project-card project-card">
+                                <div class="project-card">
                                     <div></div>
                                     <div class="CardOpx link-wrapper">
                                         <div class="imgStyleBox">
