--- a/src/main/resources/static/css/community/review-board.css
+++ b/src/main/resources/static/css/community/review-board.css
@@ -2,6 +2,7 @@ body{
     height: 100%;
     margin: 0;
     line-height: inherit;
+    display: block;
 }
 
 *{
@@ -73,7 +74,6 @@ body{
     padding-top: 30px;
     padding-left: 16px;
     padding-right: 16px;
-    
     flex-direction: column;
     max-width: 500px;
     min-width: 350px;
@@ -85,21 +85,21 @@ body{
     gap: 16px;
     display: flex;
 }
-
-@media (min-width: 768px){
-    .header-title{
-        font-weight: 700;
-        font-size: 32px;
-        line-height: 44px;
-    }
-}
-
-.header-title{
+.header-title1{
+    cursor: pointer;
     font-weight: 700;
     font-size: 24px;
     line-height: 34px;
     color: #1d1d1e;
     fill: #1d1d1e;
+}
+.header-title2{
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 34px;
+    color: #b9b9bb;
+    fill: #b9b9bb;
 }
 .review-main{
     padding-left: 16px;
@@ -345,6 +345,34 @@ button {
     flex-shrink: 0;
     color: #8a8a8b;
     fill: #8a8a8b;
+}
+.items-buttons{
+    -webkit-box-flex: 0;
+    flex: 0 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+.button{
+    cursor: pointer;
+    box-shadow: inset 0 0 0 0 #d9dfeb;
+    background-color:rgb(229 104 89 / 83%);
+    color: #fff;
+    text-shadow: none;
+    background-image: none;
+    font-size: .92857143rem;
+    display: inline-block;
+    min-height: 1em;
+    outline: 0;
+    border: none;
+    vertical-align: baseline;
+    padding: 0.92857143em 1.5em;
+    text-transform: none;
+    font-weight: 400;
+    line-height: 1em;
+    font-style: normal;
+    text-align: center;
+    border-radius: 0.28571429rem;
+    transition: opacity .1s ease,background-color .1s ease,color .1s ease,box-shadow .1s ease,background .1s ease;
 }
 
 
