--- a/src/main/resources/templates/funding/funding-plan-header.html
+++ b/src/main/resources/templates/funding/funding-plan-header.html
@@ -12,7 +12,7 @@
 </head>
 <body>
                   <!-- funding-header -->
-            <div class="funding-header">
+            <div class="funding-header" style="z-index: 1000;">
                 <div class="header-wrap">
                     <div class="header-container" style="box-shadow: none;">
                         <div class="container">
